Henry will consider all higher tier armor as luxurious and will comment appropriately.
Highwayman hides if he sees NH coming with Lares.
Highwayman is not a friendly to Seekers, he will be dead in chapter 3.
Highwayman only appears after returning from the Valley of Mines.
Hilda only takes the required 20 turnips instead of all of them.
Hodges can be asked about why Bennet was arrested after asking what happened.
Huno does not complain about Esteban if he is dead.
Huno only makes a vague comment about high price of his armor once Esteban is dead and does not say that he takes a share.
Huno will sell armor even if NH asks about it without having enough gold and will not offer the option once the armor is bought.
Igaraz can be asked about the living rock, even after moving north from the tavern.
Isgaroth can be asked for a blessing after he tells who he is.
Isgaroth can be traded with as a mage, even if he was never spoken to before.
Isgaroth's blessing creates a log entry for Thorben's quest.
Jorgen wields a Short Sword in Irdorath instead of a Sickle.
Kardif cannot be asked about who's in debt to Lehmar if NH already read the book.
Kardif cannot be talked about Attila if he is nearby and the dialog option does not kill him.
Karras does not offer his wares to non-mages.
Kati can be asked about location of Bengar and Sekobs farms only before talking to them.
Kati can die during his fight with the mercenaries.
Kati can only be asked for Baltram's shipment and food after asking her whether she is alright.
Kervo's quest cancels in chapter 4, causing Kervo and Geppert to be killed by a Lurker instead of them disappearing.
Kervo's quest fails if he is killed.
Knight 263 can be asked for a report only if NH is paladin.
Landlord will not give more then 5 beers per chapter and only 1 per day.
Lares can be asked for help with other issues after asking for money.
Lares has same sword in Irdorath as in Khorinis and doesn't carry an extra sword.